metadata/unpackaged/objects/BrainEngine_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>BE_Release__c</referenceTo>
        <relationshipLabel>BrainEngine Team Members</relationshipLabel>
        <relationshipName>BrainEngine_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BrainEngine Team Member</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BrainEngine Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>